İlişkisel kısımların detayını api üzerinde göstermeme sorunu çözüldü.

--- a/PresentationLayer/Views/Product/Index.cshtml
+++ b/PresentationLayer/Views/Product/Index.cshtml
@@ -19,8 +19,8 @@
                         <tr>
                           <th>ID</th>
                           <th>Product Name</th>
-                       @*   <th>Supplier</th>
-                          <th>Category</th>*@
+                          <th>Supplier</th>
+                          <th>Category</th>
                           <th>QuantityPerUnit</th>
                           <th>UnitPrice</th>
                           <th>UnitsInStock</th>
@@ -37,8 +37,8 @@
                         <tr>
                           <td>@item.ProductId</td>
                           <td>@item.ProductName</td>
-                          @*<td>@item.Supplier.CompanyName</td>
-                          <td>@item.Category.CategoryName</td>*@
+                          <td>@item.Supplier.CompanyName</td>
+                          <td>@item.Category.CategoryName</td>
                           <td>@item.QuantityPerUnit</td>
                           <td>@item.UnitPrice</td>
                           <td>@item.UnitsInStock</td>
