Görünüm tarafında ürün tablosunu responsive dizayna uygun hale getirdim.

--- a/PresentationLayer/Views/Product/Index.cshtml
+++ b/PresentationLayer/Views/Product/Index.cshtml
@@ -14,6 +14,7 @@
                   <div class="card-body">
                     <h4 class="card-title">Ürünler</h4>
                    
+                    <div class="table-responsive">
                     <table class="table table-hover">
                       <thead>
                         <tr>
@@ -52,7 +53,7 @@
                       }
                       </tbody>
                     </table>
-               
+                  </div>
                   </div>
                 </div>
               </div>
